...
    <string name="appearance_show_insights">Show Insights tab</string>
    <string name="settings_appearance">Appearance</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="playback_notification_channel">Music playback</string>
    <string name="player_previous">Previous</string>
    <string name="player_play">Play</string>
    <string name="player_pause">Pause</string>
    <string name="player_next">Next</string>
    <string name="full_screen_player">Full screen player</string>
    <string name="player_seek">Playback position</string>
    <string name="player_volume">Music volume</string>
    <string name="player_heart">Favorite</string>
    <string name="player_more">More options</string>
    <string name="player_shuffle">Shuffle</string>
    <string name="player_shuffle_on">Shuffle on</string>
    <string name="player_repeat">Repeat</string>
    <string name="player_repeat_off">Repeat off</string>
    <string name="player_repeat_all">Repeat all</string>
    <string name="player_repeat_one">Repeat one</string>
    <string name="player_lyrics">Lyrics</string>
...
    <string name="sort_name">Name</string>
    <string name="sort_artist">Artist</string>
    <string name="sort_play_count">Play count</string>
    <string name="sort_date_added">Date added</string>
    <string name="sort_order_asc">Ascending</string>
    <string name="sort_order_desc">Descending</string>
    <string name="track_row_more_options">Track options</string>
    <string name="track_context_menu_title">Track options</string>
    <string name="track_context_play_next">Play next</string>
    <string name="track_context_add_to_queue">Add to queue</string>
    <string name="track_context_start_mood_radio">Start Mood Radio</string>
    <string name="track_context_remove_from_queue">Remove from queue</string>
    <string name="track_context_track_info">Track info</string>
    <string name="track_context_find_lyrics">Find lyrics</string>
    <string name="track_context_find_lyrics_title">Find Lyrics</string>
    <string name="find_lyrics_track_title">Track title</string>
    <string name="find_lyrics_artist">Artist name</string>
    <string name="find_lyrics_duration">Duration</string>
    <string name="find_lyrics_search">Search</string>
    <string name="find_lyrics_searching">Searching…</string>
    <string name="find_lyrics_no_results">No lyrics found</string>
    <string name="find_lyrics_preview">Lyrics preview</string>
    <string name="find_lyrics_select">Select</string>
    <string name="track_context_add_to_favorites">Add to favorites</string>
    <string name="track_context_remove_from_favorites">Remove from favorites</string>
    <string name="track_context_add_to_playlist">Add to playlist</string>
    <string name="track_context_remove_from_playlist">Remove from playlist</string>
    <string name="track_context_go_to_album">Go to album</string>
    <string name="track_context_go_to_artist">Go to %1$s</string>
    <string name="track_context_go_to_artists">Go to artists</string>
    <string name="track_context_artist_picker_title">Artists</string>
    <string name="track_context_playlist_picker_title">Add to playlist</string>
    <string name="track_context_create_playlist">Create playlist</string>
    <string name="track_context_no_editable_playlists">Create a playlist to add this track.</string>
...
    <string name="track_info_bpm">BPM</string>
    <string name="track_info_file_size">File size</string>
    <string name="tracks_count">%1$d tracks</string>
    <string name="tracks_empty_title">No tracks in library</string>
    <string name="tracks_empty_description">Synced tracks will appear here once mobile sync completes.</string>
    <string name="tracks_no_match_title">No matching tracks</string>
    <string name="artist_row_more_options">Artist options</string>
    <string name="artist_row_open">Open artist</string>
    <string name="artist_edit">Edit artist</string>
    <string name="artist_edit_title">Edit artist</string>
    <string name="artist_choose_artwork">Choose artist artwork</string>
    <string name="artist_clear_artwork">Clear artist artwork</string>
    <string name="artists_empty_title">No artists in library</string>
    <string name="artists_empty_description">Synced artists will appear here once mobile sync completes.</string>
    <string name="artists_no_match_title">No matching artists</string>
    <string name="album_row_more_options">Album options</string>
    <string name="album_display_options">Album display options</string>
    <string name="album_display_layout">View</string>
    <string name="album_display_list">List</string>
    <string name="album_display_grid">Grid</string>
    <string name="album_row_open">Open album</string>
    <string name="album_unknown_artist">Unknown artist</string>
...
    <string name="album_details_metadata_with_year">%1$d · %2$s · %3$s</string>
    <plurals name="album_details_track_count">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <string name="artist_details_title">Artist</string>
    <string name="artist_details_empty_title">Artist unavailable</string>
    <string name="artist_details_empty_description">This artist is no longer in the synced library.</string>
    <string name="artist_details_summary">%1$s · %2$s</string>
    <plurals name="artist_details_album_count">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="artist_details_track_count">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <string name="album_track_row_more_options">Track options</string>
    <string name="genre_row_more_options">Genre options</string>
    <string name="genre_row_open">Open genre</string>
    <string name="genre_details_title">Genre</string>
    <string name="genre_details_empty_title">Genre unavailable</string>
    <string name="genre_details_empty_description">This genre is no longer in the synced library.</string>
    <string name="genre_details_summary">%1$s · %2$s</string>
    <plurals name="genre_details_album_count">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>
...
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <string name="genres_empty_title">No genres in library</string>
    <string name="genres_empty_description">Synced genres will appear here once mobile sync completes.</string>
    <string name="genres_no_match_title">No matching genres</string>
    <string name="composer_row_more_options">Composer options</string>
    <string name="composer_row_open">Open composer</string>
    <string name="composer_details_title">Composer</string>
    <string name="composer_details_empty_title">Composer unavailable</string>
    <string name="composer_details_empty_description">This composer is no longer in the synced library.</string>
    <string name="composer_details_summary">%1$s · %2$s</string>
    <plurals name="composer_details_album_count">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>
...
